Project page list style fix and removing white space.

--- a/_sass/_page.scss
+++ b/_sass/_page.scss
@@ -161,6 +161,7 @@
 
 .module-details {
     font-size: var(--scale-0);
+    line-height: 1.2;
     h3, p, a, p a {
         font-size: var(--scale-0);
     }
@@ -168,6 +169,7 @@
 
 .module-blockquote {
     font-size: var(--scale-0);
+    line-height: 1.2;
     h3, p, a, p a {
         font-size: var(--scale-0);
     }
